--- a/src/scss/utilities/_index.scss
+++ b/src/scss/utilities/_index.scss
@@ -1,3 +1,5 @@
-@forward 'color-utilities';
-@forward 'container';
-@forward 'sr-only';
+@forward "functions";
+@forward "breakpoints";
+@forward "mixins";
+@forward "color-utilities";
+@forward "sr-only";
