--- a/src/scss/base/_index.scss
+++ b/src/scss/base/_index.scss
@@ -1,5 +1,5 @@
-@forward 'font-face';
-@forward 'root';
-@forward 'reset';
-@forward 'typography';
-@forward 'base';
+@forward "font-face";
+@forward "variables";
+@forward "reset";
+@forward "typography";
+@forward "base";
